Data and Models

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -10,7 +10,7 @@
 {% block content %}
     <section id="welcome">
         <header>
-            <img src="{% static 'blog/images/mushahid.jpg' %}" alt="Mushahid- The Author of this Blog">
+            <img src="{% static 'blog/images/mushahid-insta-dp.jpg' %}" alt="Mushahid- The Author of this Blog">
             <h2>MUSHAHID's BLOG</h2>
         </header>
         <p>Hi, I am Mushahid and I love to blog about tech and the nature</p>
