Added-forms-files-and-sessions

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -17,7 +17,7 @@
     </section>
 
     <section id="latest-posts">
-        <h2>My Lastest Thoughts</h2>
+        <h2>My Latest Thoughts</h2>
         <ul>
             {% for post in posts %}
                 {% include "blog/includes/post.html" %}
