--- a/blog/static/blog/post-detail.css
+++ b/blog/static/blog/post-detail.css
@@ -62,7 +62,7 @@ main {
   max-width: 90rem;
   margin: 3rem auto;
   background-color: white;
-  padding: 1rem;
+  padding: 1rem 2rem;
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 }
@@ -72,4 +72,136 @@ main {
     color: #390281;
     padding: 0.25rem 0.5rem;
     border-radius: 6px;
+}
+
+#comment-form {
+    margin: 3rem auto;
+    width: 90%;
+    max-width: 50rem;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+    padding: 1rem;
+}
+
+#comment-form button {
+    font: inherit;
+    background-color: #390281;
+    color: white;
+    border: 1px solid #390281;
+    padding: 0.5rem 1.5rem;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+#comment-form button:hover,
+#comment-form button:active {
+    background-color: #4f0ba7;
+    border-color: #4f0ba7;
+}
+
+.form-control {
+    margin-bottom: 1rem;
+}
+
+.form-control label {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    display: block;
+}
+
+.form-control input,
+.form-control textarea {
+    display: block;
+    width: 100%;
+    font: inherit;
+    padding: 0.25rem;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+}
+
+
+.errorlist {
+    list-style: none;
+    margin: 0.5rem 0;
+    padding: 0;
+    color: #d6000b;
+}
+
+.invalid label {
+    color: #d6000b;
+}
+
+.invalid input,
+.invalid textarea {
+    border-color: #d6000b;
+    background-color: #ffe6e7;
+}
+
+#comment-errors {
+    margin: 8rem auto 3rem auto;
+    border: 1px solid #d6000b;
+    background-color: #ffe6e7;
+    padding: 1rem;
+    width: 90%;
+    max-width: 50rem;
+    border-radius: 12px;
+}
+
+#comment-errors a{
+    text-decoration: none;
+    border: 1px solid #d6000b;
+    background-color: #d6000b;
+    color: white;
+    padding: 0.25rem 1.5rem;
+    border-radius: 6px;
+}
+
+#comments {
+    margin: 3rem auto;
+    width: 90%;
+    max-width: 90rem;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+    padding: 1rem 2rem;
+}
+
+#comments ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#comments li {
+    margin-bottom: 1rem;
+    border-bottom: 2px solid #ccc;
+}
+
+#comments li:last-of-type {
+    border-bottom: none;
+}
+
+#comments h4 {
+    color: #464646
+}
+
+#read-later {
+ margin: 2rem 0;
+}
+
+#read-later button {
+    background-color: transparent;
+    border: 1px solid white;
+    padding: 0.5rem 2rem;
+    font: inherit;
+    color: white;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+#read-later button:hover,
+#read-later button:active {
+    background-color: white;
+    color: #390281;
 }
