--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -1,9 +1,8 @@
-{% load static %}
 <li>
     <article class="post">
         <a href="{% url 'post-detail' post.slug %}">
-            <img src="{% static 'blog/images/'|add:post.image_name %}", alt="{{post.title}}">
-            <div class="post_content">
+            <img src="{{ post.image.url }}", alt="{{post.title}}">
+            <div class="post__content">
                 <h3>{{ post.title }}</h3>
                 <p>{{ post.excerpt }}</p>
             </div>
