--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -7,6 +7,13 @@
 {% endblock %}
 
 {% block content %}
+        {% if comment_form.errors %}
+        <div id="comment-errors">
+            <h2>Saving the comment failed!</h2>
+            <p>Please check the comment from below the post and fix your errors.</p>
+            <a href="#comment-form">Fix!</a>
+        </div>
+        {% endif %}
     <section id="summary">
         <h2>{{ post.title }}</h2>
         <div>
@@ -14,9 +21,25 @@
                 <span class="tag">#{{tag.caption}}</span>
             {% endfor %}
         </div>
+        <div id="read-later">
+
+            <form action="{% url 'read-later-posts' %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" value="{{post.id}}" name="post_id">
+                {% if display_read_later %}
+                    <button>Read Later</button>
+                {% else %}
+                    <button>Remove As Saved</button>
+                {% endif %}
+            </form>
+
+        </div>
         <article>
-            <img src="{%static 'blog/images/'|add:post.image_name %}" alt="{{post.title}}">
+            <img src="{{ post.image.url }}" alt="{{post.title}}">
             <address>By <a href="mailto:{{post.author.email}}">{{post.author}}</a></address>
+            <div>
+               Published on <time>{{ post.published_on|date:'d M Y'}}</time>
+            </div>
             <div>
                 Last Updated on <time>{{ post.last_updated|date:'d M Y'}}</time>
             </div>
@@ -26,4 +49,29 @@
     <main>
         {{ post.content|linebreaks }}
     </main>
+    <section id="comments">
+        <h1>Comment Section</h1>
+        <ul>
+            {% for comment in comments %}
+            <li>
+                <h4>{{comment.user_name}}: </h4>
+                <p>{{comment.text}}</p>
+            {% endfor %}
+            </li>
+        </ul>
+    </section>
+    <section id="comment-form">
+        <h1>Comment your thoughts</h1>
+        <form action="{% url 'post-detail' post.slug %}" method="post">
+            {% csrf_token %}
+            {% for form_field in comment_form %}
+            <div class="form-control {% if form_field.errors %}invalid{% endif %}">
+                {{ form_field.label_tag }}
+                {{ form_field }}
+                {{ form_field.errors }}
+            </div>
+            {% endfor %}
+            <button>Save Comment</button>
+        </form>
+    </section>
 {% endblock %}
